--- a/TDF/test.html
+++ b/TDF/test.html
@@ -20,6 +20,10 @@
         </ul>
 
     </div>
+    <details class="details3">
+        <summary>(3) CSS Transition (Specific) Height - Summary</summary>
+        No wrapper, specific heights set. Still no animation. Or, at least, not when this was originally created in 2013. As of 2016 (maybe earlier) it animates, albeit not ideally, in Chrome, Firefox, Opera, and Safari! <a href="https://wpdev.uservoice.com/forums/257854-microsoft-edge-developer/suggestions/6261266-details-summary-elements">IE and Edge don't support summary and details at all, remember</a>.
+    </details>
 </body>
 
 </html>
