--- a/Se/index.html
+++ b/Se/index.html
@@ -2,13 +2,120 @@
 <html>
 
 <head>
-    <title>Our Funky HTML Page</title>
-    <meta name="description" content="Our first page">
-    <meta name="keywords" content="html tutorial template">
+    <title>Welcome to Silver Empire</title>
+    <meta name="description" content="Training Page">
 </head>
 
 <body>
-    Content goes here.
+    <div class="navbar-content">
+
+        <a class="ak-brand" href="http://www.ankama-group.com">Ankama</a>
+
+        <div class="ak-navbar-part ak-navbar-left-part">
+            <ul>
+                <li>
+                    <a href="javascript:void(0);" class="ak-dropbtn" drop-index="0">jeu</a>
+                </li>
+                <li>
+                    <a href="javascript:void(0);" class="ak-dropbtn" drop-index="1">transmédia</a>
+                </li>
+                <li>
+                    <a href="javascript:void(0);" class="ak-dropbtn" drop-index="2">Actualités</a>
+                </li>
+            </ul>
+        </div>
+        <div class="ak-navbar-part ak-navbar-center-part">
+            <a class="ak-logo-game" href="/">
+                <img class="ak-logo-desktop"
+                    src="https://static.ankama.com/g/modules/masterpage/block/header/navbar/dofus/logo.png" alt="">
+                <img class="ak-logo-desktop-fixed"
+                    src="https://static.ankama.com/g/modules/masterpage/block/header/navbar/dofus/little_logo.png"
+                    alt="">
+            </a>
+        </div>
+        <div class="ak-navbar-part ak-navbar-right-part">
+            <ul>
+                <li>
+                    <a href="/fr/achat-kamas" class="">acheter des kamas</a>
+                </li>
+                <li>
+                    <a href="/fr/forum" class="">Forums</a>
+                </li>
+                <li>
+                    <a href="/fr/boutique" class="">Boutique</a>
+                </li>
+            </ul>
+        </div>
+
+        <div class="ak-search-content">
+
+            <div class="ak-navbar-right ak-has-search">
+                <a class="ak-nav-notifications ak-button-modal" data-hasqtip="5">
+                    <span class="label label-danger">1</span>
+                </a>
+                <script type="application/json">{"target":".ak-idbar .ak-box-notifications"}</script>
+                <div
+                    class="ak-idbar-box ak-box-notifications ak-container ak-notification-list ak-notification-list-idbar">
+                    <div class="ak-notification-list-header">
+                        <div class="ak-box-title">
+                            1 notification <button type="button" class="ak-qtip-close" role="button">
+                                X
+                            </button>
+                        </div>
+                    </div>
+
+                    <div class="ak-notification-list-inner">
+                        <div class="ak-notification" data-notificationid="9">
+                            <p>
+                                <a href="https://secure.dofus.com/fr/boutique/18-abonnements">Votre abonnement à DOFUS a
+                                    expiré le 08/06/2021. Pensez à le renouveler !</a>
+                            </p>
+                        </div>
+                        <script type="application/json">{"bHideOnClose":true,"bHideOnView":false}</script>
+                    </div>
+                </div>
+                <div class="ak-button-modal ak-nav-logged" data-hasqtip="6">
+                    <div class="ak-logged-account">
+                        <span class="ak-nickname">
+                            nnn </span>
+                        <span class="avatar">
+                            <img src="https://avatar.ankama.com/users/27041948.png" alt="Avatar">
+                        </span>
+                    </div>
+                </div>
+                <script type="application/json">{"target":".ak-box-logged"}</script> <a class="ak-navbar-search"
+                    data-navbar-search="">
+                    <div class="ak-form">
+                        <form class="ak-container" role="form" method="get" action="/fr/recherche">
+                            <div class="form-group">
+
+
+
+
+                                <input type="text" class="form-control ak-autocomplete ui-autocomplete-input" name="q"
+                                    value="Rechercher..." autocapitalize="off" autocorrect="off" autocomplete="off">
+                                <script
+                                    type="application/json">{"minLength":1,"delay":0,"select":"location","url":"https:\/\/www.dofus.com\/fr\/autocomplete","titlemax":45,"shownoresults":true,"noresults":"Voir tous les r\u00e9sultats"}</script>
+
+
+                                <ul class="ui-autocomplete ui-front ui-menu ui-widget ui-widget-content" id="ui-id-1"
+                                    tabindex="0" style="display: none;"></ul>
+                            </div>
+
+
+
+
+
+                            <input type="submit" class="" value="ok">
+
+
+                        </form>
+                    </div>
+                </a>
+            </div>
+        </div>
+
+    </div>
 </body>
 
 </html>
