--- a/Se/index.html
+++ b/Se/index.html
@@ -4,6 +4,9 @@
 <head>
     <title>Welcome to Silver Empire</title>
     <meta name="description" content="Training Page">
+    <link type="text/css" rel="stylesheet" href="https://static.ankama.com/dofus/ng/css/../modules/common/common.css">
+    <link type="text/css" rel="stylesheet" href="https://static.ankama.com/dofus/ng/css/../modules/homepage/homepage.css">
+    <link type="text/css" rel="stylesheet" href="https://static.ankama.com/dofus/ng/css/../modules/homepage/pandamonium/pandamonium.css">
 </head>
 
 <body>
