--- a/Se/index.html
+++ b/Se/index.html
@@ -4,23 +4,23 @@
 <head>
     <title>Welcome to Silver Empire</title>
     <meta name="description" content="Training Page">
-    <link type="text/css" rel="stylesheet" href="https://static.ankama.com/dofus/ng/css/../modules/common/common.css">
+    <link type="text/css" rel="stylesheet" href="https://static.ankama.com/dofus/ng/modules/common/common.css">
     <link type="text/css" rel="stylesheet"
-        href="https://static.ankama.com/dofus/ng/css/../modules/homepage/homepage.css">
+        href="https://static.ankama.com/dofus/ng/modules/homepage/homepage.css">
     <link type="text/css" rel="stylesheet"
-        href="https://static.ankama.com/dofus/ng/css/../modules/homepage/pandamonium/pandamonium.css">
+        href="https://static.ankama.com/dofus/ng/modules/homepage/pandamonium/pandamonium.css">
     <link type="text/css" rel="stylesheet" href="
         ./style.css">
     <script type="text/javascript" src="https://static.ankama.com/g/common.js"></script>
     <script type="text/javascript"
-        src="https://static.ankama.com/dofus/ng/javascript/../modules/common/common.js"></script>
+        src="https://static.ankama.com/dofus/ng/modules/common/common.js"></script>
     <script type="text/javascript">
         window.RAV = { "publicKey": "publishable_key_live_1BYd8LTcIr8pqvbbnaoPEAQtSWkQ7RII", "enabled": true, "logged": true, "domain": ".dofus.com" };
     </script>
     <script type="text/javascript"
-        src="https://static.ankama.com/dofus/ng/javascript/../modules/homepage/homepage.js"></script>
+        src="https://static.ankama.com/dofus/ng/modules/homepage/homepage.js"></script>
     <script type="text/javascript"
-        src="https://static.ankama.com/dofus/ng/javascript/../modules/homepage/pandamonium/pandamonium.js"></script>
+        src="https://static.ankama.com/dofus/ng/modules/homepage/pandamonium/pandamonium.js"></script>
 </head>
 
 <body>
@@ -324,7 +324,7 @@
     <img class="ak-logo-desktop"
     src="https://cdn.discordapp.com/attachments/701922189217235075/847577450820403200/selogov1.png"
     alt="">
-    
+
 </body>
 
 </html>
