--- a/Se/index.html
+++ b/Se/index.html
@@ -4,9 +4,9 @@
 <head>
     <title>Welcome to Silver Empire</title>
     <meta name="description" content="Training Page">
-    <link type="stylesheet" rel="stylesheet" href="https://static.ankama.com/dofus/ng/modules/common/common.css">
-    <link type="stylesheet" rel="stylesheet" href="https://static.ankama.com/dofus/ng/modules/homepage/homepage.css">
-    <link type="stylesheet" rel="stylesheet"
+    <link type="text/css" rel="stylesheet" href="https://static.ankama.com/dofus/ng/modules/common/common.css">
+    <link type="text/css" rel="stylesheet" href="https://static.ankama.com/dofus/ng/modules/homepage/homepage.css">
+    <link type="text/css" rel="stylesheet"
         href="https://static.ankama.com/dofus/ng/modules/homepage/pandamonium/pandamonium.css">
     <script type="text/javascript" src="https://static.ankama.com/g/common.js"></script>
     <script type="text/javascript" src="https://static.ankama.com/dofus/ng/modules/common/common.js"></script>
