Local Files update

--- a/Se/index.html
+++ b/Se/index.html
@@ -4,15 +4,13 @@
 <head>
     <title>Welcome to Silver Empire</title>
     <meta name="description" content="Training Page">
-    <link type="text/css" rel="stylesheet" href="https://static.ankama.com/dofus/ng/modules/common/common.css">
-    <link type="text/css" rel="stylesheet" href="https://static.ankama.com/dofus/ng/modules/homepage/homepage.css">
-    <link type="text/css" rel="stylesheet"
-        href="https://static.ankama.com/dofus/ng/modules/homepage/pandamonium/pandamonium.css">
-    <script type="text/javascript" src="https://static.ankama.com/g/common.js"></script>
-    <script type="text/javascript" src="https://static.ankama.com/dofus/ng/modules/common/common.js"></script>
-    <script type="text/javascript" src="https://static.ankama.com/dofus/ng/modules/homepage/homepage.js"></script>
-    <script type="text/javascript"
-        src="https://static.ankama.com/dofus/ng/modules/homepage/pandamonium/pandamonium.js"></script>
+    <link type="text/css" rel="stylesheet" href="./custom_css/common.css">
+    <link type="text/css" rel="stylesheet" href="./custom_css/homepage.css">
+    <link type="text/css" rel="stylesheet" href="./custom_css/pandamonium.css">
+    <script type="text/javascript" src="./custom_js/common.js"></script>
+    <script type="text/javascript" src="./custom_js/common2.js"></script>
+    <script type="text/javascript" src="./custom_js/homepage.js"></script>
+    <script type="text/javascript" src="./custom_js/pandamonium.js"></script>
     <link type="text/css" rel="stylesheet" href="./style.css">
 </head>
 
