--- a/Se/HeadMenu/index.html
+++ b/Se/HeadMenu/index.html
@@ -7,6 +7,7 @@
     <link type="text/css" rel="stylesheet" href="./custom_css/common.css">
     <link type="text/css" rel="stylesheet" href="./custom_css/homepage.css">
     <link type="text/css" rel="stylesheet" href="./custom_css/pandamonium.css">
+    
     <script type="text/javascript" src="./custom_js/common.js"></script>
     <script type="text/javascript" src="./custom_js/common2.js"></script>
     <script type="text/javascript" src="./custom_js/homepage.js"></script>
@@ -32,14 +33,14 @@
                 <div class="ak-navbar-part ak-navbar-left-part">
                     <ul>
                         <li>
-                            <a href="javascript:void(0);" class="ak-dropbtn" drop-index="0">jeu</a>
+                            <a href="javascript:void(0);" class="ak-dropbtn" drop-index="0">Text1</a>
                         </li>
                         <li>
-                            <a href="javascript:void(0);" class="ak-dropbtn" drop-index="1">transmédia</a>
+                            <a href="javascript:void(0);" class="ak-dropbtn" drop-index="1">Text2</a>
                         </li>
                         <li>
                             <a href="javascript:void(0);" class="ak-dropbtn" drop-index="2"
-                                mouse="leaved">Actualités</a>
+                                mouse="leaved">Text3</a>
                         </li>
                     </ul>
                 </div>
@@ -53,13 +54,13 @@
                 <div class="ak-navbar-part ak-navbar-right-part">
                     <ul>
                         <li>
-                            <a href="/fr/achat-kamas" class="">acheter des kamas</a>
+                            <a href="/fr/achat-kamas" class="">Text4</a>
                         </li>
                         <li>
-                            <a href="/fr/forum" class="">Forums</a>
+                            <a href="/fr/forum" class="">Text5</a>
                         </li>
                         <li>
-                            <a href="/fr/boutique" class="">Boutique</a>
+                            <a href="/fr/boutique" class="">Text6</a>
                         </li>
                     </ul>
                 </div>
@@ -297,18 +298,6 @@
             </div>
         </div>
     </nav>
-    <img class="ak-logo-desktop"
-        src="https://cdn.discordapp.com/attachments/701922189217235075/847577450820403200/selogov1.png" alt="">
-    <img class="ak-logo-desktop"
-        src="https://cdn.discordapp.com/attachments/701922189217235075/847577450820403200/selogov1.png" alt="">
-    <img class="ak-logo-desktop"
-        src="https://cdn.discordapp.com/attachments/701922189217235075/847577450820403200/selogov1.png" alt="">
-    <img class="ak-logo-desktop"
-        src="https://cdn.discordapp.com/attachments/701922189217235075/847577450820403200/selogov1.png" alt="">
-    <img class="ak-logo-desktop"
-        src="https://cdn.discordapp.com/attachments/701922189217235075/847577450820403200/selogov1.png" alt="">
-    <img class="ak-logo-desktop"
-        src="https://cdn.discordapp.com/attachments/701922189217235075/847577450820403200/selogov1.png" alt="">
 
 </body>
 
